--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "react-example-movies",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
+    "license": "MIT",
     "dependencies": {
-        "axios": "^0.19.0",
-        "bootstrap": "^4.3.1",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-scripts": "3.0.1",
-        "reactstrap": "^8.0.0"
+        "axios": "^1.6.8",
+        "bootstrap": "^5.3.3",
+        "next": "14.2.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-scripts": "^5.0.1",
+        "reactstrap": "^9.2.2"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -17,7 +19,9 @@
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
-        "extends": "react-app"
+        "extends": [
+            "react-app"
+        ]
     },
     "browserslist": {
         "production": [
